EditAPI(Add and edit):productController
